--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,13 +1,115 @@
-@media screen and(min-width: 480px) {
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 428px;
+  }
+}
 
-    .container {
-        max-width: 428px;
-      }
+@media screen and (max-width: 480px) {
+ 
+}
 
+@media screen and (max-width: 767px) {
+  .header-list {
+    display: none;
+  }
 
+  .contacts {
+    display: none;
+  }
 
+  .header-burger-btn {
+    border: none;
+    background-color: transparent;
+    height: 32px;
+    padding: 0;
+  }
 
+  .header-burger-btn-svg {
+    fill: #2e2f42;
+  }
 
+  .menu-container {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    overflow: scroll;
+    background-color: #ffffff;
+    padding: 40px;
+    padding-top: 80px;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
 
-    
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
+
+  .mobile-menu-window {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transform: translate(0);
+  }
+
+  .mobile-btn-modal-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    border-radius: 50%;
+    height: 24px;
+    width: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color var(--transition-func);
+  }
+
+  .mobile-menu-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+  }
+  .mobile-menu-item-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(40 / 36);
+    color: #2e2f42;
+    position: relative;
+  }
+  .contact-item:first-child {
+    margin-bottom: 40px;
+  }
+  .contact-item-number {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 40px;
+    font-style: normal;
+    text-transform: capitalize;
+    color: #4d5ae5;
+  }
+  .contact-item-mail {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    font-style: normal;
+    color: #434455;
+  }
+
+  /*  */
+  .mobile-list-icon {
+    display: flex;
+    /* margin-right: 56px; */
+    column-gap: 56px;
+    margin-top: 48px;
+  }
+
+  .mobile-active-pages {
+    color: #404bbf;
+  }
 }
