--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,11 @@ img {
   margin-right: 0;
 }
 
+/* ----------------------- Mobile menue -------------- section */
+
+
+
+
 /* -------------------------- MAIN -------------------- section */
 
 .main {
@@ -193,21 +198,22 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/mobile/mobile-people-office.jpg);
   background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 1440px, 1440px, cover;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  background-position: center;
+  background-size: cover;
+  padding-top: 112px;
+  padding-bottom: 112px;
+  margin: 0 auto;
 }
 
 .main-header {
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 40px;
   letter-spacing: 0.02em;
   color: var(--main-white-color);
-  margin-bottom: 48px;
-  max-width: 500px;
+  margin-bottom: 72px;
+  max-width: 318px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -261,7 +267,7 @@ img {
 /* ----------------- Modal --------------------- */
 
 .modal {
-  width: 408px;
+  width: 392px;
   min-height: 576px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -288,6 +294,7 @@ img {
   justify-content: center;
   align-items: center;
   transition: background-color var(--transition-func);
+ 
 }
 
 .btn-modal-close:hover,
@@ -304,6 +311,7 @@ img {
   height: 8px;
   width: 8px;
   transition: fill var(--transition-func);
+  /* fill: black; */
 }
 
 /*  ------------------- Modal Form ---------------------- */
@@ -466,36 +474,50 @@ img {
 /* ------------------- ATTITUDES --------------------- section */
 
 .attitudes {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .attitudes-list {
   display: flex;
+  /* flex-wrap: wrap; */
 }
 
 .attitudes-item {
-  margin-right: 24px;
-  width: calc(100% / 4);
+  max-width: 396px;
+  /* margin-right: 24px; */
+  /* width: calc(100% / 2); */
+  
 }
 
-.attitudes-item:last-child {
-  margin-right: 0;
+.attitudes-caption {
+  margin-bottom: 72px;
 }
+
+/* .attitudes-caption:last-child {
+  margin-bottom: 0;
+} */
+
+/* .attitudes-item:last-child {
+  margin-right: 0;
+} */
 
 .attitudes-item-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
   letter-spacing: 0.02em;
   color: var(--main-dark-color);
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .attitudes-item-text {
+  font-weight: 500;
   font-size: 16px;
   line-height: var(--main-line-height);
   letter-spacing: 0.02em;
-  color: var(--main-dark-color);
+  color: #434455;
+  /* justify-content: center; */
 }
 
 .attitudes-icons {
@@ -540,10 +562,17 @@ img {
 
 .team {
   background: var(--light-color);
-  padding: 120px 0;
+  padding-top: 96px;
+  padding-bottom: 128px;
+}
+
+.team-caption {
+  /* max-width: 264px; */
+  margin-bottom: 72px;
 }
 
 .team-header {
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -554,20 +583,20 @@ img {
 }
 
 .team-list {
-  display: flex;
+  /* display: flex; */
 }
 
 .team-item {
   background-color: var(--main-white-color);
-  margin-right: 24px;
+  /* margin-right: 24px; */
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item:last-child {
+/* .team-item:last-child {
   margin-right: 0;
-}
+} */
 
 .team-item-header {
   font-weight: 500;
@@ -582,7 +611,7 @@ img {
   font-size: 16px;
   line-height: var(--main-line-height);
   letter-spacing: 0.02em;
-  color: var(--main-dark-color);
+  color: #434455;
 }
 
 .photo-caption {
@@ -596,6 +625,7 @@ img {
 .photo-caption-soc-list {
   display: flex;
   margin-top: 8px;
+  justify-content: center;
 }
 
 .photo-caption-soc-item {
@@ -628,27 +658,41 @@ img {
 /* ----------------------- CUSTOMERS ------------------- section */
 
 .customers {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .customers-header {
   text-align: center;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .customers-icon-list {
+  /* display: flex; */
+  /* justify-content: center; */
+
+  /*  */
+
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 72px;
+  column-gap: 16px;
+  width: 100%;
 }
 
 .customers-icon-item {
-  box-sizing: border-box;
-  margin-right: 24px;
+  /* box-sizing: border-box; */
+  /* margin-right: 24px; */
+  /* justify-content: center; */
+  /* align-items: center; */
+
+  /*  */
+  width: 190px;
+  height: 88px;
 }
 
-.customers-icon-item:last-child {
+/* .customers-icon-item:last-child {
   margin-right: 0;
-}
+} */
 
 .customers-icon-link {
   display: flex;
@@ -681,7 +725,7 @@ img {
 
 .footer {
   background-color: var(--main-dark-color);
-  padding: 100px 0;
+  padding: 96px 0;
 }
 
 .footer-logo {
@@ -714,16 +758,20 @@ img {
   left: 156px;
   top: 2418px;
   margin-top: 16px;
+  margin-bottom: 72px;
 }
 
 .footer-container {
-  display: flex;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  justify-content: center;
 }
 
 /* ------------------- */
 
 .social-media {
-  margin-left: 120px;
+  /* margin-left: 120px; */
+  /* justify-content: center; */
 }
 
 .social-media-header {
@@ -743,6 +791,7 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   margin-right: 16px;
+  margin-bottom: 72px;
 }
 
 .social-media-item:last-child {
@@ -769,7 +818,7 @@ img {
 /* -------------------------- */
 
 .subscribe {
-  margin-left: 80px;
+  /* margin-left: 80px; */
 }
 
 .subscribe-title {
@@ -782,7 +831,7 @@ img {
 }
 
 .subscribe-form {
-  display: flex;
+  /* display: flex; */
 }
 
 .subscribe-item {
@@ -820,6 +869,7 @@ img {
   padding: 8px 24px;
   transition: background-color var(--transition-func),
     box-shadow var(--transition-func), border-color var(--transition-func);
+  margin-top: 16px;
 }
 
 .subscribe-btn:is(:hover, :focus) {
