--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,5 +1,66 @@
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .container {
-    max-width: 428px;
+    max-width: 768px;
+  }
+
+  .header-burger-btn {
+    display: none;
+  }
+
+  .menu-container {
+    display: none;
+  }
+
+  .header-list {
+    margin-left: 120px;
+  }
+
+  .contacts-list {
+    flex-wrap: wrap;
+    /* margin-left: 40px; */
+    justify-content: end;
+  }
+
+  .contact-link {
+    padding: 0;
+  }
+
+  .contact-item {
+    /* margin-right: 0;   */
+    /* justify-content: end; */
+    margin-right: 0;
+    margin-bottom: 4px;
+  }
+
+  .main {
+    position: relative;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet/tablet-people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 112px;
+    padding-bottom: 108px;
+    margin: 0 auto;
+  }
+
+
+  .attitudes-list {
+    /* display: flex; */
+    flex-wrap: wrap;
+    flex-direction: row
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .attitudes-icons {
+    display: none;
+  }
+
+  .products {
+    display: none;
   }
 }
