--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,10 +2,25 @@
   .container {
     max-width: 428px;
   }
+
+  .main {
+    max-width: 428px;
+  }
+
+  /* .customers-icon-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 16px;
+  } */
 }
 
+/* @media screen and (max-width: 428px) {
+  .main {
+    max-width: 428px;
+  }
+} */
+
 @media screen and (max-width: 480px) {
- 
 }
 
 @media screen and (max-width: 767px) {
@@ -25,7 +40,7 @@
   }
 
   .header-burger-btn-svg {
-    fill: #2e2f42;
+    stroke: black;
   }
 
   .menu-container {
