--- a/css/tablet.css
+++ b/css/tablet.css
@@ -33,6 +33,8 @@
   }
 
   .main {
+    margin: 0 auto;
+    max-width: 768px;
     position: relative;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -40,19 +42,54 @@
       ),
       url(../images/tablet/tablet-people-office.jpg);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
+
+    display: block;
     background-size: cover;
+    align-items: center;
+    text-align: center;
     padding-top: 112px;
-    padding-bottom: 108px;
-    margin: 0 auto;
+    padding-bottom: 112px;
+  }
+
+  .main-header {
+    font-size: 56px;
+    line-height: 60px;
+    max-width: 494px;
+  }
+
+  .modal {
+    width: 408px;
+  }
+
+  .attitudes-list {
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .attitudes-item {
+    max-width: 356px;
+    /* margin-bottom: 72px;
+    margin-right: 24px; */
+    width: calc(100% / 2);
+    margin-bottom: 0;
+  }
+
+  .team {
+    padding-bottom: 104px;
+  }
+
+  .team-list {
+    row-gap: 64px;
+    column-gap: 24px;
+    /* flex-direction: row; */
     
   }
 
-
-  .attitudes-list {
-    /* display: flex; */
-    flex-wrap: wrap;
-    flex-direction: row
+  .team-item {
   }
 }
 
