--- a/css/tablet.css
+++ b/css/tablet.css
@@ -17,7 +17,6 @@
 
   .contacts-list {
     flex-wrap: wrap;
-    /* margin-left: 40px; */
     justify-content: end;
   }
 
@@ -26,8 +25,6 @@
   }
 
   .contact-item {
-    /* margin-right: 0;   */
-    /* justify-content: end; */
     margin-right: 0;
     margin-bottom: 4px;
   }
@@ -65,15 +62,12 @@
   .attitudes-list {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: row; */
     column-gap: 24px;
     row-gap: 72px;
   }
 
   .attitudes-item {
     max-width: 356px;
-    /* margin-bottom: 72px;
-    margin-right: 24px; */
     width: calc(100% / 2);
     margin-bottom: 0;
   }
@@ -83,14 +77,45 @@
   }
 
   .team-list {
+    max-width: 552px;
     row-gap: 64px;
     column-gap: 24px;
-    /* flex-direction: row; */
-    
+    margin: 0 auto;
   }
 
   .team-item {
+    margin-bottom: 0;
   }
+
+  .customers-icon-list {
+    column-gap: 24px;
+  }
+
+  .customers-icon-item {
+    width: 168px;
+    height: 88px;
+  }
+
+  .portfolio {
+    padding-top: 64px;
+    padding-bottom: 96px;
+  }
+
+  .portfolio-buttons-list {
+    display: flex;
+    column-gap: 24px;
+    justify-content: center;
+  }
+
+  .portfolio-products-list {
+    row-gap: 72px;
+  }
+
+  .portfolio-product-item {
+    max-width: 356px;
+  }
+
+ 
 }
 
 @media screen and (max-width: 1199px) {
