--- a/css/desktop.css
+++ b/css/desktop.css
@@ -20,6 +20,8 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 1440px, 1440px, cover;
+    padding-top: 188px;
+    padding-bottom: 188px;
   }
 
   .attitudes {
