--- a/css/desktop.css
+++ b/css/desktop.css
@@ -19,7 +19,7 @@
       url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 1440px, 1440px, cover;
+    background-size: 1440px, cover;
     padding-top: 188px;
     padding-bottom: 188px;
   }
@@ -75,7 +75,9 @@
 
   .footer-container {
     display: flex;
-    justify-content: start;
+    flex-wrap: nowrap;
+    /* font-weight: wrap; */
+    /* justify-content: start; */
     flex-direction: row;
   }
 
@@ -90,16 +92,16 @@
   }
 
   .subscribe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
   }
   .subscribe-caption {
   }
 
   .subscribe-title {
     text-align: start;
-    margin-right: 24px;
+    margin-right: 0;
   }
 
   .subscribe-item {
@@ -112,6 +114,7 @@
   }
 
   .subscribe-btn {
-    margin-top: auto;
+    margin-left: 0;
+    /* margin-top: auto; */
   }
 }
