--- a/css/tablet.css
+++ b/css/tablet.css
@@ -124,7 +124,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     align-items: start;
-    /* justify-content: start; */
+    justify-content: start;
     /* justify-content: center; */
     /* width: 100%; */
     /* align-items: center; */
